[package]
name = "test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.0", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }

axum-extra = { version = "0.10.0", features = ["typed-header"] }
jsonwebtoken = "9.3"
